--- a/pie.ipynb
+++ b/pie.ipynb
@@ -25,7 +25,6 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -78,9 +77,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:nlp]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-nlp-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -92,7 +91,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
